[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/gui/GUILabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/player/portrait/generic_portrait.png" type="Texture" id=2]
[ext_resource path="res://scripts/menus/stats/stat_card.gd" type="Script" id=3]

[node name="stat_card" type="Control"]
anchor_right = 0.208
anchor_bottom = 0.463
margin_right = 0.640015
margin_bottom = -0.0400085
rect_min_size = Vector2( 400, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.270588, 0.270588, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 490.0
color = Color( 0.294118, 0.294118, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 490.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 375.0
margin_bottom = 475.0

[node name="player_name" parent="MarginContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 370.0
margin_bottom = 26.0
text = "$PLAYER_NAME"
align = 1

[node name="player_portrait" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 370.0
margin_bottom = 91.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="stat_kills" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 370.0
margin_bottom = 121.0

[node name="title" parent="MarginContainer/MarginContainer/VBoxContainer/stat_kills" instance=ExtResource( 1 )]
margin_right = 234.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Kills"

[node name="score" parent="MarginContainer/MarginContainer/VBoxContainer/stat_kills" instance=ExtResource( 1 )]
margin_left = 238.0
margin_right = 370.0
margin_bottom = 26.0
text = "$KILL_COUNT"

[node name="stat_deaths" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 370.0
margin_bottom = 151.0

[node name="title" parent="MarginContainer/MarginContainer/VBoxContainer/stat_deaths" instance=ExtResource( 1 )]
margin_right = 222.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Deaths"

[node name="score" parent="MarginContainer/MarginContainer/VBoxContainer/stat_deaths" instance=ExtResource( 1 )]
margin_left = 226.0
margin_right = 370.0
margin_bottom = 26.0
text = "$DEATH_COUNT"

[node name="stat_revives" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 370.0
margin_bottom = 181.0

[node name="title" parent="MarginContainer/MarginContainer/VBoxContainer/stat_revives" instance=ExtResource( 1 )]
margin_right = 210.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Revives"

[node name="score" parent="MarginContainer/MarginContainer/VBoxContainer/stat_revives" instance=ExtResource( 1 )]
margin_left = 214.0
margin_right = 370.0
margin_bottom = 26.0
text = "$REVIVE_COUNT"

[node name="stat_rooms" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 370.0
margin_bottom = 211.0

[node name="title" parent="MarginContainer/MarginContainer/VBoxContainer/stat_rooms" instance=ExtResource( 1 )]
margin_right = 218.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Rooms Cleared"

[node name="score" parent="MarginContainer/MarginContainer/VBoxContainer/stat_rooms" instance=ExtResource( 1 )]
margin_left = 222.0
margin_right = 370.0
margin_bottom = 26.0
text = "$ROOMS_COUNT"

[node name="stat_floors" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 370.0
margin_bottom = 241.0

[node name="title" parent="MarginContainer/MarginContainer/VBoxContainer/stat_floors" instance=ExtResource( 1 )]
margin_right = 222.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Floors Cleared"

[node name="score" parent="MarginContainer/MarginContainer/VBoxContainer/stat_floors" instance=ExtResource( 1 )]
margin_left = 226.0
margin_right = 370.0
margin_bottom = 26.0
text = "$FLOOR_COUNT"
